--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body ng-controller="mainCtrl">
 <header>
     <h1 class="banner">Smart Table</h1>
-    <a class="btn" href="#">Code on github</a>
+    <a class="btn" href="#"><i class="icon-download-alt"></i>Code on github</a>
 </header>
 <div class="main">
     <p class="text-error">
