--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ scope.formatedValue;//the formated value (not the raw string)</code></pre>
 }]);</code></pre>
             </pane>
             <pane heading="markup">
-                <pre ng-non-bindable><code class="language-markup">&lt;div>
+                <pre ng-non-bindable data-line="1"><code class="language-markup">&lt;div>
     &lt;smart-table columns="columnCollection" rows="rowCollection">&lt;/smart-table>
 &lt;/div></code></pre>
             </pane>
