--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="#section-selection" class="btn">Select row(s)</a></li>
         <li><a href="#section-edit" class="btn">Edit cell(s)</a></li>
         <li><a href="#section-style" class="btn">Simple style</a></li>
+        <li><a href="#section-cellTemplate" class="btn">Cell template</a></li>
     </ul>
 </header>
 <div class="main">
